# LifeQuest

./: .env.example  .gitignore  AGENTS.md  README.md  code_review.md  pyproject.toml
.codex/: config.toml
app/: cli.py  main.py
app/api/routes/: activity.py  (+12 more)
app/core/: config.py  database.py  exceptions.py  migrations.py
app/integrations/: anki.py  github.py  openai_checkin.py
app/models/: activity.py  anki.py  automation.py  dashboard.py  game.py  japanese.py  learning.py  money.py  review.py  subscription.py  universal.py  work_knowledge.py
app/repositories/: activity.py  anki.py  automation.py  game.py  japanese.py  learning.py  money.py  subscription.py  work_knowledge.py
app/services/: activity.py  automation.py  dashboard.py  game.py  japanese.py  learning.py  money.py  notion_schema.py  notion_sync.py  review.py  scheduled_automation.py  subscription.py  work_knowledge.py
docs/: architecture.md  codex_workflow.md  implementation_issues.md  lifequest_runtime.md  money_quest.md  notion_schema.md
scripts/runtime/: open-dashboard.ps1  register-lifequest-startup-task.ps1  run-lifequest-server.ps1  start-lifequest.ps1  status-lifequest.ps1  stop-lifequest.ps1  unregister-lifequest-startup-task.ps1
scripts/scheduled/: anki-daily.ps1  close-anki.ps1  open-anki.ps1
tests/: conftest.py  test_activity_review.py  test_automation.py  test_core_foundations.py  test_dashboard.py  test_game.py  test_japanese.py  test_learning_service.py  test_migrations.py  test_money.py  test_notion_schema.py  test_notion_sync.py  test_subscription.py  test_work_knowledge.py
(+18 files in other folders)
